--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,60 @@
+/*
+ * The Typekit service used to deliver this font or fonts for use on websites
+ * is provided by Adobe and is subject to these Terms of Use
+ * http://www.adobe.com/products/eulas/tou_typekit. For font license
+ * information, see the list below.
+ *
+ * karmina-sans:
+ *   - http://typekit.com/eulas/00000000000000007735b1ef
+ *   - http://typekit.com/eulas/00000000000000007735b1f1
+ * ohno-blazeface:
+ *   - http://typekit.com/eulas/00000000000000007735ce60
+ *
+ * © 2009-2021 Adobe Systems Incorporated. All Rights Reserved.
+ */
+/*{"last_published":"2021-10-28 17:54:00 UTC"}*/
+
+@import url("https://p.typekit.net/p.css?s=1&k=idj3mjw&ht=tk&f=1677.1962.42669&a=1250456&app=typekit&e=css");
+
+@font-face {
+  font-family: "karmina-sans";
+  src: url("https://use.typekit.net/af/189cc4/00000000000000007735b1ef/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
+      format("woff2"),
+    url("https://use.typekit.net/af/189cc4/00000000000000007735b1ef/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
+      format("woff"),
+    url("https://use.typekit.net/af/189cc4/00000000000000007735b1ef/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
+      format("opentype");
+  font-display: auto;
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "karmina-sans";
+  src: url("https://use.typekit.net/af/edf2dc/00000000000000007735b1f1/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
+      format("woff2"),
+    url("https://use.typekit.net/af/edf2dc/00000000000000007735b1f1/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
+      format("woff"),
+    url("https://use.typekit.net/af/edf2dc/00000000000000007735b1f1/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
+      format("opentype");
+  font-display: auto;
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "ohno-blazeface";
+  src: url("https://use.typekit.net/af/cfafae/00000000000000007735ce60/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
+      format("woff2"),
+    url("https://use.typekit.net/af/cfafae/00000000000000007735ce60/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
+      format("woff"),
+    url("https://use.typekit.net/af/cfafae/00000000000000007735ce60/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
+      format("opentype");
+  font-display: auto;
+  font-style: normal;
+  font-weight: 400;
+}
+
 html,
 body {
   padding: 0;
